--- a/17-production/package.json
+++ b/17-production/package.json
@@ -4,10 +4,10 @@
   "description": "docker ps // lista todos os containers criados",
   "main": "index.js",
   "scripts": {
-    "test": "mocha src/tests",
+    "test": "nyc --reporter=html mocha --timeout 10000 --exit src/tests",
     "test:prod": "cross-env NODE_ENV=prod npm t",
     "test:watch": "mocha src/tests -w",
-    "prod": "cross-env NODE_ENV=prod node api.js"
+    "prod": "cross-env NODE_ENV=prod pm2-runtime src/api.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "boom": "^7.3.0",
+    "cross-env": "^5.2.0",
     "dotenv": "^6.2.0",
     "hapi": "^18.0.0",
     "hapi-auth-jwt2": "^8.3.0",
@@ -25,10 +26,12 @@
     "mongoose": "^5.4.6",
     "pg": "^7.8.0",
     "pg-hstore": "^2.3.2",
+    "pm2": "^3.2.9",
     "sequelize": "^4.42.0",
     "vision": "^5.4.4"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "nyc": "^13.1.0"
   }
 }
